switch to a better temp img

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             
 
             <div class="project-layout align-right" id="key1">
-                <a class="project-img" href="https://www.razer.com/games/virus"><img src="img/temp.PNG"></a>
+                <a class="project-img" href="https://www.razer.com/games/virus"><img src="img/Little Things.jpg"></a>
                 <div class="project-content">
                     <h4>Key Project</h4>
                     <h3><a href="https://www.razer.com/games/virus">Training Mode: Virus Edition</a></h3>
@@ -61,11 +61,11 @@
                         <li class="skill-item">JavaScript (ES6)</li>
                     </ul>
                 </div>
-                <a class="project-img" href="#"><img src="img/temp.PNG"></a>
+                <a class="project-img" href="#"><img src="img/Little Things.jpg"></a>
             </div>
 
             <div class="project-layout align-right" id="key3">
-                <a class="project-img" href="#"><img src="img/temp.PNG"></a>
+                <a class="project-img" href="#"><img src="img/Little Things.jpg"></a>
                 <div class="project-content">
                     <h4>Key Project</h4>
                     <h3><a href="https://www.razer.com/games/virus">Training Mode: Virus Edition</a></h3>
@@ -91,11 +91,11 @@
                         <li class="skill-item">JavaScript (ES6)</li>
                     </ul>
                 </div>
-                <a class="project-img" href="#"><img src="img/temp.PNG"></a>
+                <a class="project-img" href="#"><img src="img/Little Things.jpg"></a>
             </div>
 
             <div class="project-layout align-right">
-                <a class="project-img" href="#"><img src="img/temp.PNG"></a>
+                <a class="project-img" href="#"><img src="img/Little Things.jpg"></a>
                 <div class="project-content">
                     <h3><a href="https://www.razer.com/games/virus">Training Mode: Virus Edition</a></h3>
                     <p>Created the front-end of a web clicker game, working in cohesion with back-end programmers. It is available now on Razers' website.</p>
@@ -118,11 +118,11 @@
                         <li class="skill-item">JavaScript (ES6)</li>
                     </ul>
                 </div>
-                <a class="project-img" href="#"><img src="img/temp.PNG"></a>
+                <a class="project-img" href="#"><img src="img/Little Things.jpg"></a>
             </div>
 
             <div class="project-layout align-right">
-                <a class="project-img" href="#"><img src="img/temp.PNG"></a>
+                <a class="project-img" href="#"><img src="img/Little Things.jpg"></a>
                 <div class="project-content">
                     <h3><a href="https://www.razer.com/games/virus">Training Mode: Virus Edition</a></h3>
                     <p>Created the front-end of a web clicker game, working in cohesion with back-end programmers. It is available now on Razers' website.</p>
@@ -140,7 +140,7 @@
                     <a class="project-img" href="#">
                         <div class="img-styling">
                             
-                            <img src="img/temp.PNG">
+                            <img src="img/Little Things.jpg">
                         </div>
                     </a>
                 </div> -->
