--- a/index.html
+++ b/index.html
@@ -56,37 +56,36 @@
                         <li class="skill-item">HTML5</li>
                         <li class="skill-item">CSS</li>
                         <li class="skill-item">JavaScript (ES6)</li>
+                        <li class="skill-item">Python</li>
+                        <li class="skill-item">Django</li>
+                        <li class="skill-item">Redis</li>
                     </ul>
-                    <!-- <p>Stuff I learned in a short list here</p> -->
                 </div>
             </div>
 
             <div class="project-layout" id="key2">
                 <div class="project-content">
                     <h4>Key Project</h4>
-                    <h3>Project Title</h3>
-                    <p>Project Description</p>
+                    <h3>Cybersecurity Research</h3>
+                    <p>Conducted research on controller configurations and cybersecurity, documenting them in Google Docs and Google Slides.</p>
                     <ul class="skills-list">
-                        <li class="skill-item">Node.js</li>
-                        <li class="skill-item">NPM</li>
-                        <li class="skill-item">JavaScript (ES6)</li>
+                        <li class="skill-item">Data Collection</li>
+                        <li class="skill-item">Critical Analysis</li>
                     </ul>
                 </div>
-                <a class="project-img" href="#"><img src="img/Little Things.jpg"></a>
+                <a class="project-img" href="#"><img style="background-color: white;" src="img/confidential.svg"></a>
             </div>
 
             <div class="project-layout align-right" id="key3">
-                <a class="project-img" href="#"><img src="img/Little Things.jpg"></a>
+                <a class="project-img" href="#"><img src="img/OBSLive.jpg"></a>
                 <div class="project-content">
                     <h4>Key Project</h4>
-                    <h3><a href="https://www.razer.com/games/virus">Training Mode: Virus Edition</a></h3>
-                    <p>Created the front-end of a web clicker game, working in cohesion with back-end programmers. It is available now on Razers' website.</p>
+                    <h3>OBS Live Project</h3>
+                    <p>Compiled OBS Live from it's source code using various tools and frameworks for research.</p>
                     <ul class="skills-list">
-                        <li class="skill-item">HTML5</li>
-                        <li class="skill-item">CSS</li>
-                        <li class="skill-item">JavaScript (ES6)</li>
+                        <li class="skill-item">Cmake</li>
+                        <li class="skill-item">C++</li>
                     </ul>
-                    <!-- <p>Stuff I learned in a short list here</p> -->
                 </div>
             </div>
 
@@ -94,26 +93,27 @@
 
             <div class="project-layout">
                 <div class="project-content">
-                    <h3>Project Title</h3>
-                    <p>Project Description</p>
+                    <h3>Razer Testing App</h3>
+                    <p>Wrote the front-end for a testing application, using primarily HTML, CSS, Typescript, npm, Node.js and Docker.</p>
                     <ul class="skills-list">
+                        <li class="skill-item">Typescript</li>
+                        <li class="skill-item">Babel</li>
+                        <li class="skill-item">Docker</li>
                         <li class="skill-item">Node.js</li>
                         <li class="skill-item">NPM</li>
-                        <li class="skill-item">JavaScript (ES6)</li>
                     </ul>
                 </div>
-                <a class="project-img" href="#"><img src="img/Little Things.jpg"></a>
+                <a class="project-img" href="#"><img src="img/testingapp.png"></a>
             </div>
 
             <div class="project-layout align-right">
-                <a class="project-img" href="#"><img src="img/Little Things.jpg"></a>
+                <a class="project-img" href="#"><img src="img/servers.jpg"></a>
                 <div class="project-content">
-                    <h3><a href="https://www.razer.com/games/virus">Training Mode: Virus Edition</a></h3>
-                    <p>Created the front-end of a web clicker game, working in cohesion with back-end programmers. It is available now on Razers' website.</p>
+                    <h3>Goma Project</h3>
+                    <p>Investigated feasibility of setting up a distributed build system with Goma, using a BuildGrid server and bot as an RBE backend.</p>
                     <ul class="skills-list">
-                        <li class="skill-item">HTML5</li>
-                        <li class="skill-item">CSS</li>
-                        <li class="skill-item">JavaScript (ES6)</li>
+                        <li class="skill-item">Goma</li>
+                        <li class="skill-item">BuildGrid</li>
                     </ul>
                     <!-- <p>Stuff I learned in a short list here</p> -->
                 </div>
@@ -121,28 +121,28 @@
 
             <div class="project-layout">
                 <div class="project-content">
-                    <h3>Project Title</h3>
-                    <p>Project Description</p>
+                    <h3>NW.JS Project</h3>
+                    <p>Built NW.JS from source for research.</p>
                     <ul class="skills-list">
-                        <li class="skill-item">Node.js</li>
-                        <li class="skill-item">NPM</li>
-                        <li class="skill-item">JavaScript (ES6)</li>
+                        <li class="skill-item">NW.JS</li>
+                        <li class="skill-item">Chromium Toolchain</li>
+                        <li class="skill-item">Data Collection</li>
+                        <li class="skill-item">Critical Analysis</li>
                     </ul>
                 </div>
-                <a class="project-img" href="#"><img src="img/Little Things.jpg"></a>
+                <a class="project-img" href="#"><img src="img/nwjs.png"></a>
             </div>
 
             <div class="project-layout align-right">
-                <a class="project-img" href="#"><img src="img/Little Things.jpg"></a>
+                <a class="project-img" href="#"><img src="img/research.png"></a>
                 <div class="project-content">
-                    <h3><a href="https://www.razer.com/games/virus">Training Mode: Virus Edition</a></h3>
-                    <p>Created the front-end of a web clicker game, working in cohesion with back-end programmers. It is available now on Razers' website.</p>
+                    <h3>Misc Research Projects</h3>
+                    <p>Conducted research on controller configurations, and investigated browser features for research.</p>
                     <ul class="skills-list">
-                        <li class="skill-item">HTML5</li>
-                        <li class="skill-item">CSS</li>
-                        <li class="skill-item">JavaScript (ES6)</li>
+                        <li class="skill-item">Chromium Toolchain</li>
+                        <li class="skill-item">Data Collection</li>
+                        <li class="skill-item">Critical Analysis</li>
                     </ul>
-                    <!-- <p>Stuff I learned in a short list here</p> -->
                 </div>
             </div>
 
