updated with Google fonts and more polish. Not sure about the colour scheme, but it will do for now. Will update with a better one if I can find it.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/788ec5f987.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <link href='http://fonts.googleapis.com/css?family=Rubik' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Rubik|Open+Sans' rel='stylesheet' type='text/css'>
     <title>Internship Portfolio</title>
 </head>
 <body>
@@ -61,6 +61,7 @@
                     <h3><a href="https://www.razer.com/games/virus">Training Mode: Virus Edition</a></h3>
                     <p>Created the front-end of a web clicker game, working in cohesion with back-end programmers. It is available now on Razers' website.</p>
                     <ul class="skills-list">
+                        <li class="skill-item"><h4>What I learned:</h4></li>
                         <li class="skill-item">HTML5</li>
                         <li class="skill-item">CSS</li>
                         <li class="skill-item">JavaScript (ES6)</li>
@@ -76,6 +77,7 @@
                     <h3>Cybersecurity Research</h3>
                     <p>Conducted research on controller configurations and cybersecurity, documenting them in Google Docs and Google Slides.</p>
                     <ul class="skills-list">
+                        <li class="skill-item"><h4>What I learned:</h4></li>
                         <li class="skill-item">Data Collection</li>
                         <li class="skill-item">Critical Analysis</li>
                     </ul>
@@ -89,6 +91,7 @@
                     <h3>OBS Live Project</h3>
                     <p>Compiled OBS Live from it's source code using various tools and frameworks for research.</p>
                     <ul class="skills-list">
+                        <li class="skill-item"><h4>What I learned:</h4></li>
                         <li class="skill-item">Cmake</li>
                         <li class="skill-item">C++</li>
                     </ul>
@@ -103,6 +106,7 @@
                     <h3>Razer Testing App</h3>
                     <p>Wrote the front-end for a testing application, using primarily HTML, CSS, Typescript, npm, Node.js and Docker.</p>
                     <ul class="skills-list">
+                        <li class="skill-item"><h4>What I learned:</h4></li>
                         <li class="skill-item">Typescript</li>
                         <li class="skill-item">Babel</li>
                         <li class="skill-item">Docker</li>
@@ -119,6 +123,7 @@
                     <h3>Goma Project</h3>
                     <p>Investigated feasibility of setting up a distributed build system with Goma, using a BuildGrid server and bot as an RBE backend.</p>
                     <ul class="skills-list">
+                        <li class="skill-item"><h4>What I learned:</h4></li>
                         <li class="skill-item">Goma</li>
                         <li class="skill-item">BuildGrid</li>
                     </ul>
@@ -128,10 +133,11 @@
 
             <div class="project-layout">
                 <div class="project-content">
-                    <h3>NW.JS Project</h3>
-                    <p>Built NW.JS from source for research, using Chromium, Google's depot tools and Visual Studio.</p>
+                    <h3>NW.js Project</h3>
+                    <p>Built NW.js from source for research, using Chromium, Google's depot tools and Visual Studio.</p>
                     <ul class="skills-list">
-                        <li class="skill-item">NW.JS</li>
+                        <li class="skill-item"><h4>What I learned:</h4></li>
+                        <li class="skill-item">NW.js</li>
                         <li class="skill-item">Chromium Toolchain</li>
                         <li class="skill-item">Data Collection</li>
                         <li class="skill-item">Critical Analysis</li>
@@ -146,6 +152,7 @@
                     <h3>Misc Research Projects</h3>
                     <p>Conducted research on controller configurations, and investigated browser features for research.</p>
                     <ul class="skills-list">
+                        <li class="skill-item"><h4>What I learned:</h4></li>
                         <li class="skill-item">Chromium Toolchain</li>
                         <li class="skill-item">Data Collection</li>
                         <li class="skill-item">Critical Analysis</li>
