--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                     <p>Created the front-end of a web clicker game, working in cohesion with a small team to deliver the game on a tight schedule. It is available now on Razers' website.</p>
                     <ul class="skills-list">
                         <li class="skill-item"><h4>What I learned:</h4></li>
+                        <li class="skill-item">Git</li>
                         <li class="skill-item">HTML5</li>
                         <li class="skill-item">CSS</li>
                         <li class="skill-item">JavaScript (ES6)</li>
