--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                     <ul class="skills-list">
                         <li class="skill-item"><h4>What I learned:</h4></li>
                         <li class="skill-item">Git</li>
+                        <li class="skill-item">Terminal</li>
                         <li class="skill-item">HTML5</li>
                         <li class="skill-item">CSS</li>
                         <li class="skill-item">JavaScript (ES6)</li>
@@ -126,6 +127,8 @@
                     <p>Investigated feasibility of setting up a distributed build system with Goma, using a BuildGrid server and bot as an RBE backend. It has applications with school, such as using a similar (but different) set up for Unity builds. Overkill, but possible.</p>
                     <ul class="skills-list">
                         <li class="skill-item"><h4>What I learned:</h4></li>
+                        <li class="skill-item">Ubuntu</li>
+                        <li class="skill-item">Bash</li>
                         <li class="skill-item">Goma</li>
                         <li class="skill-item">BuildGrid</li>
                     </ul>
