--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
                 </li>
                 <li class="item"><a href="#misc" class="red-color-transition">Misc</a></li>
                 <li class="item"><a class="red-color-transition" href="/Enrique Marcelo- Resume.pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>
+                <li class="item">
+                    <a href="#">Key Projects</a>
+                    <ul class="item dropdown-list hidden">
+                        <li class="dropdown-item">
+                            <a href="#key" class="red-color-transition">Key Projects</a>
+                        </li>
+                        <li class="dropdown-item">
+                            <a href="#key" class="red-color-transition">Kts</a>
+                        </li>
+                        <li class="dropdown-item">
+                            <a href="#key" class="red-color-transition">Key Pts</a>
+                        </li>
+                    </ul>
+                </li>
                 <li class="item dropdown-list">
                     <a class="dropdown-list-header red-color-transition" href="mailto:enriquecmarcelo@gmail.com" rel="noopener noreferrer">Contact</a>
                     <ul class="item flex-override">
