--- a/index.html
+++ b/index.html
@@ -28,7 +28,16 @@
                             <a href="#spacerunners" class="color-transition">Spacerunners</a>
                         </li> -->
                         <li class="dropdown-item">
+                            <a href="#haulaway" class="color-transition">Haul Away!</a>
+                        </li>
+                        <li class="dropdown-item">
+                            <a href="#wondervalley" class="color-transition">Wonder Valley</a>
+                        </li>
+                        <li class="dropdown-item">
                             <a href="#hg" class="color-transition">Hangry Guardians</a>
+                        </li>
+                        <li class="dropdown-item">
+                            <a href="#versaton" class="color-transition">Versaton</a>
                         </li>
                         <li class="dropdown-item">
                             <a href="#dcubed" class="color-transition">Decubed</a>
