--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
                             <a href="#versaton" class="color-transition">Versaton</a>
                         </li>
                         <li class="dropdown-item">
+                            <a href="#spacerunners" class="color-transition">SpaceRunners</a>
+                        </li>
+                        <li class="dropdown-item">
                             <a href="#dcubed" class="color-transition">Decubed</a>
                         </li>
                     </ul>
                 </li>
 
-                <li class="item color-transition">
-                    <a href="#misc" class="color-transition">Misc</a>
-                </li>
                 <li class="item color-transition">
                     <a class="color-transition" href="/Enrique Marcelo- Resume.pdf" target="_blank" rel="noopener noreferrer">Resume</a>
                 </li>
