--- a/hangryguardians.html
+++ b/hangryguardians.html
@@ -49,7 +49,7 @@
                 </li>
 
                 <li class="item color-transition">
-                    <a class="color-transition" href="/Enrique Marcelo- Resume.pdf" target="_blank" rel="noopener noreferrer">Resume</a>
+                    <a class="color-transition" href="https://drive.google.com/file/d/1l9Jhh03rFOzCsblhSOQDXUKh6I7GtRdj/view?usp=sharing" target="_blank" rel="noopener noreferrer">Resume</a>
                 </li>
                 
                 <li class="item color-transition dropdown-list">
