--- a/index.html
+++ b/index.html
@@ -234,19 +234,8 @@
                         A multiplayer, team versus team card game created for Singapore Polytechnic.
                         <br>
                         <br>
-                        Players form teams of 3, taking on the role of an Artist, Programmer and Designer
-                        trying to score more points than the enemy team. each role supports another.
-                        <br>
-                    </p>
-                    <p>
-                        A single player, cube puzzle game created for a school project. 
-                        <br>
-                        <br>
-                        The player plays as a sticky cube- each plate on the cube will attach
-                        to an empty space in the grid-filled world. Step onto an empty space
-                        without a plate on your bottom face and you will fall through the grid 
-                        and lose. Players can attach black plates onto empty faces of their cube 
-                        by stepping onto that grid space. Reach the yellow plate to win.
+                        Players form teams of 3, taking on the role of an Artist, Programmer and Designer, each role designed to support another.
+                        The team that scores more points than the enemy team wins! 
                         <br>
                     </p>
                     <!-- <ul class="skills-list">
