--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                             <a href="#wondervalley" class="color-transition">Wonder Valley</a>
                         </li>
                         <li class="dropdown-item">
+                            <a href="#razervirus" class="color-transition">Razer Virus Web Game</a>
+                        </li>
+                        <li class="dropdown-item">
                             <a href="#versaton" class="color-transition">Versaton</a>
                         </li>
                         <li class="dropdown-item">
@@ -201,7 +204,7 @@
             <div class="project-layout align-right" id="razervirus">
                 
                 <a class="project-img" href="https://www.razer.com/games/virus"><img src="img/viruswebgame.PNG"></a>
-                
+
                 <div class="project-content">
                     <h3><a href="https://www.razer.com/games/virus">Training Mode: Virus Edition</a></h3>
                     <p>A singleplayer web browser clicker game created during my internship at Razer. 
