--- a/wondervalley.html
+++ b/wondervalley.html
@@ -142,7 +142,7 @@
                                             <br>
                                             <strong>Contributions:</strong>
                                             Level design, mechanics design and implementation, 
-                                            created map terrain generation tools, saving system.
+                                            created map terrain generation tools, saving system, and audio system.
                                             <br>
                                             <strong>Software Used:</strong>
                                             Unity Game Engine
