--- a/hangryguardians.html
+++ b/hangryguardians.html
@@ -120,7 +120,12 @@
                                             Hangry Guardians is a client project for GameStart Asia 2019. 
                                             It is a 2D mobile puzzle game app created in Unity and showcased at Gamestart, 
                                             a gaming convention in Singapore. 
-                                            It was developed by ET's 8, an eight person team.
+                                            It was developed by ET's 8, an eight person team, including 
+                                            <a href="https://bestcolour.github.io/site/#/">Kee Shen</a>
+                                            and
+                                            <a href="https://kaixingnicholas.wixsite.com/gdportfolio">Nicholas Teoh</a>
+                                            .
+                                            <br>
                                         </p>
                                         <br>
                                         <p>
