--- a/haulaway.html
+++ b/haulaway.html
@@ -118,6 +118,12 @@
                                         </h3>
                                         <p>
                                             Haul Away! is the final year project for my course at Singapore Polytechnic. 
+                                            The team for this project includes 
+                                            <a href="https://bestcolour.github.io/site/#/">Kee Shen</a>
+                                            and
+                                            <a href="https://kaixingnicholas.wixsite.com/gdportfolio">Nicholas Teoh</a>
+                                            , without whom the already incredibly challenging project would have been a bust.
+                                            <br>
                                             A chaotic couch cooperative delivery game for 2-4 players, 
                                             set in the hectic high seas of Baboom Bay. 
                                             Hired by Shady Steve, gather your friends and 
