--- a/wondervalley.html
+++ b/wondervalley.html
@@ -121,6 +121,13 @@
                                             where you play as Alice, a boy lost in wonderland. 
                                             Build and move your allies to escort Alice 
                                             through waves of ever-increasing enemies to the Queen’s Castle.
+                                            
+                                            The team for this project includes 
+                                            <a href="https://bestcolour.github.io/site/#/">Kee Shen</a>
+                                            and
+                                            <a href="https://kaixingnicholas.wixsite.com/gdportfolio">Nicholas Teoh</a>
+                                            , without whom this challenging project would likely fail.
+                                            <br>
                                         </p>
                                         <br>
                                         <h3 class="pb-2" style="font-size: 1.5em;">Project Information</h3>
