--- a/spacerunners.html
+++ b/spacerunners.html
@@ -118,10 +118,18 @@
                                         </h3>
                                         <p>
                                             A multiplayer networking PC game school project featuring up to 6 players. 
-                                            asymmetric gameplay where one player plays as a space overlord 
+                                            For this project I teamed up with
+                                            <a href="https://bestcolour.github.io/site/#/">Kee Shen</a>
+                                            who handled the networking and UI for this project.
+                                            <br>
+                                            The game features asymmetric gameplay where one player plays as a space overlord 
                                             and the others play as space runners. 
                                             The overlords' goal is to destroy all the runners 
                                             while the runners goal is to collect objectives on the map.
+                                            <br>
+                                            The challenge of designing asymmetric gameplay is an interesting one. By limiting ourselves 
+                                            to very simple mechanics, we overcame the balancing issues that arose from asymmetric, 
+                                            player versus player gameplay with varying player count.
                                         </p>
                                         <br>
                                         <h3 class="pb-2" style="font-size: 1.5em;">Project Information</h3>
