--- a/index.html
+++ b/index.html
@@ -283,6 +283,13 @@
     <!-- END OF MAIN BODY -->
 
     </div>
+            
+    <div class="footer">
+        <div class="section-content, py-2">
+            <span class="text">Copyright © 2021 by Enrique Marcelo </span>
+        </div>
+    </div>
+
     <script src="main.js"></script>
 </body>
 </html>
