added screen shots, dumped decubed itch.io and youtube vid link in html, look and update

--- a/decubed.html
+++ b/decubed.html
@@ -74,6 +74,11 @@
 
     <!-- END OF HEADER -->
 
+    <!-- VIDEO LINK HERE -->
+<!-- https://www.youtube.com/watch?v=DWqfUMbUHxA -->
+<!-- ITCH.IO LINK HERE -->
+<!-- https://ishorty.itch.io/decubed -->
+
     <div id="page">
         <div id="project-container" style="opacity: 1; display: block;" class="">
             <!-- <div class="project-bg"></div> -->
@@ -166,19 +171,19 @@
                                     </div>
                                     
                                     <div class="img-container banner-container mx-3 mb-3">
-                                        <img src="img/Decubed/Level 1.PNG.png" class="feature-banner" style="max-width: 400px;">
+                                        <img src="img/Decubed/Level 1.png" class="feature-banner" style="max-width: 400px;">
                                         <p class="img-caption mx-2 mt-1">Level 1: Teaching the player to roll</p>
                                     </div>
                                     <div class="img-container banner-container mx-3 mb-3">
-                                        <img src="img/Decubed/Level 2.PNG.png" class="feature-banner" style="max-width: 400px;">
+                                        <img src="img/Decubed/Level 2.png" class="feature-banner" style="max-width: 400px;">
                                         <p class="img-caption mx-2 mt-1">Level 2: Applying what they've learned</p>
                                     </div>
                                     <div class="img-container banner-container mx-3 mb-3">
-                                        <img src="img/Decubed/Level 3.PNG.png" class="feature-banner" style="max-width: 400px;">
+                                        <img src="img/Decubed/Level 3.png" class="feature-banner" style="max-width: 400px;">
                                         <p class="img-caption mx-2 mt-1">Level 3: Introducing vertical movement</p>
                                     </div>
                                     <div class="img-container banner-container mx-3 mb-3">
-                                        <img src="img/Decubed/Level 4.PNG.png" class="feature-banner" style="max-width: 400px;">
+                                        <img src="img/Decubed/Level 4.png" class="feature-banner" style="max-width: 400px;">
                                         <p class="img-caption mx-2 mt-1">Level 4: More walls, more solutions</p>
                                     </div>
                                     
