--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                     </ul> -->
                 </div>
 
-                <a class="project-img default-cursor" href="decubed.html"><img class="nodrag bg-colour" src="img/Decubed/Start Screen.PNG.png"></a>
+                <a class="project-img default-cursor" href="decubed.html"><img class="nodrag bg-colour" src="img/Decubed/Decubed Title.png"></a>
             
             </div>
 
