checkpoint all of that

--- a/hangryguardians.html
+++ b/hangryguardians.html
@@ -22,31 +22,31 @@
                 </li>
 
                 <li class="item">
-                    <a href="#games" class="color-transition">Projects</a>
+                    <a href="index.html#games" class="color-transition">Projects</a>
                     <ul class="item color-transition dropdown-list hidden">
                         <!-- <li class="dropdown-item">
                             <a href="#spacerunners" class="color-transition">Spacerunners</a>
                         </li> -->
                         <li class="dropdown-item">
-                            <a href="#haulaway" class="color-transition">Haul Away!</a>
+                            <a href="haulaway.html" class="color-transition">Haul Away!</a>
                         </li>
                         <li class="dropdown-item">
-                            <a href="#spacerunners" class="color-transition">SpaceRunners</a>
+                            <a href="spacerunners.html" class="color-transition">SpaceRunners</a>
                         </li>
                         <li class="dropdown-item">
-                            <a href="#hg" class="color-transition">Hangry Guardians</a>
+                            <a href="hangryguardians.html" class="color-transition">Hangry Guardians</a>
                         </li>
                         <li class="dropdown-item">
-                            <a href="#wondervalley" class="color-transition">Wonder Valley</a>
+                            <a href="wondervalley.html" class="color-transition">Wonder Valley</a>
                         </li>
                         <li class="dropdown-item">
-                            <a href="#razervirus" class="color-transition">Razer Virus Web Game</a>
+                            <a href="https://www.razer.com/games/virus" class="color-transition">Razer Virus Web Game</a>
                         </li>
                         <li class="dropdown-item">
-                            <a href="#versaton" class="color-transition">Versaton</a>
+                            <a href="Versaton.html" class="color-transition">Versaton</a>
                         </li>
                         <li class="dropdown-item">
-                            <a href="#dcubed" class="color-transition">Decubed</a>
+                            <a href="decubed.html" class="color-transition">Decubed</a>
                         </li>
                     </ul>
                 </li>
@@ -75,7 +75,7 @@
     <!-- END OF HEADER -->
 
     <div id="page">
-        <div id="project-container" style="opacity: 1; display: block;" class="">
+        <div id="project-container" class="">
             <!-- <div class="project-bg"></div> -->
             <div class="project-contents-container">
                 <div class="contents-flexbox">
@@ -239,11 +239,12 @@
         <!-- End of PROJECT CONTENT -->
         
         </div>
-        <div id="footer" class="section--small section" style="background-color: #525252">
+        
+        <!-- <div id="footer" class="section--small section" style="background-color: #525252">
             <div class="section-content" style="text-align: center; padding-top: 10px; padding-bottom: 10px; margin-top: 40px;">
                 <span class="text">Copyright © 2021 by Enrique Marcelo </span>
             </div>
-        </div>
+        </div> -->
 
     </div>
 
