--- a/haulaway.html
+++ b/haulaway.html
@@ -197,11 +197,11 @@
         <!-- End of PROJECT CONTENT -->
         
         </div>
-        <div id="footer" class="section--small section" style="background-color: #525252">
+        <!-- <div id="footer" class="section--small section" style="background-color: #525252">
             <div class="section-content" style="text-align: center; padding-top: 10px; padding-bottom: 10px; margin-top: 40px;">
                 <span class="text">Copyright © 2021 by Enrique Marcelo </span>
             </div>
-        </div>
+        </div> -->
 
     </div>
 
