added scale to thumbnails on web, updated decubed with vid

--- a/haulaway.html
+++ b/haulaway.html
@@ -169,7 +169,7 @@
                                     </div>
                                     
                                     
-                                    <div class="contents-flexbox pb-3">
+                                    <div class="img-gallery contents-flexbox pb-3">
                                         <div class="img-container banner-container ml-3">
                                             <img src="img/haulaway/seamines.jpg" class="feature-banner">
                                             <p class="img-caption mx-2 mt-1">Beware of sea mines!</p>
