more updoots, footer added

--- a/Versaton.html
+++ b/Versaton.html
@@ -123,7 +123,7 @@
                                             3 months (Apr - Jun 2019)
                                             <br>
                                             <strong>Team Size:</strong>
-                                            3, myself and 2 Artists
+                                            3, 1 Designer, 2 Artists
                                             <br>
                                             <strong>Role:</strong>
                                             Designer, UI/UX Designer
@@ -162,16 +162,15 @@
                         </div>
                     </div>
                 </div>
+            </div>
+
+        </div>
+        <!-- End of PROJECT CONTENT -->
+
+        <div class="footer">
+            <span>Copyright © 2021 by Enrique Marcelo</span>
         </div>
 
-        <!-- End of PROJECT CONTENT -->
-        
-        </div>
-        <!-- <div id="footer" class="section--small section" style="background-color: #525252">
-            <div class="section-content" style="text-align: center; padding-top: 10px; padding-bottom: 10px; margin-top: 40px;">
-                <span class="text">Copyright © 2021 by Enrique Marcelo </span>
-            </div>
-        </div> -->
 
     </div>
 
