--- a/index.html
+++ b/index.html
@@ -289,11 +289,9 @@
 
     </div>
             
-    <!-- <div class="footer">
-        <div class="section-content, py-2">
-            <span class="text">Copyright © 2021 by Enrique Marcelo </span>
-        </div>
-    </div> -->
+    <div class="footer">
+        <span>Copyright © 2021 by Enrique Marcelo</span>
+    </div>
 
     <script src="main.js"></script>
 </body>
