text links green

--- a/index.html
+++ b/index.html
@@ -246,8 +246,11 @@
                     <p>A singleplayer web browser clicker game created during my internship at Razer. 
                         Players try to click as many viruses before time runs out.
                         <br>
-                        It is available now on Razers' website.</p>
-                        <br>
+                        It is available now on Razers' website
+                        <a href="https://www.razer.com/games/virus" target="_blank">
+                        here.</a>
+                    </p>
+                    <br>
                 </div>
 
             </div>
