--- a/decubed.html
+++ b/decubed.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/788ec5f987.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+    <link href="lightbox/lightbox.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Rubik|Open+Sans' rel='stylesheet' type='text/css'>
     <title>Decubed</title>
 </head>
@@ -217,5 +218,6 @@
 
     <script src="main.js"></script>
     <script src="embedyt.js"></script>
+    <script src="lightbox/lightbox.min.js"></script>
 </body>
 </html>
