--- a/Versaton.html
+++ b/Versaton.html
@@ -98,15 +98,15 @@
                                     
                                     <div class="contents-flexbox pt-3 pb-5">
                                         <div class="img-container banner-container ml-3">
-                                            <img src="img/Versaton/artistcropped.png" class="feature-banner">
+                                            <img src="img/Versaton/artistcropped.png" class="feature-banner" style="max-width: 13vw;">
                                             <p class="img-caption mx-2 mt-1">Artist card template</p>
                                         </div>
                                         <div class="img-container banner-container ml-3">
-                                            <img src="img/Versaton/programmerfinalcard.png" class="feature-banner">
+                                            <img src="img/Versaton/programmerfinalcard.png" class="feature-banner" style="max-width: 13vw;">
                                             <p class="img-caption mx-2 mt-1">Example programmer card</p>
                                         </div>
                                         <div class="img-container banner-container ml-3">
-                                            <img src="img/Versaton/designercropped.png" class="feature-banner">
+                                            <img src="img/Versaton/designercropped.png" class="feature-banner" style="max-width: 13vw;">
                                             <p class="img-caption mx-2 mt-1">Designer card template</p>
                                         </div>
                                     </div>
