--- a/decubed.html
+++ b/decubed.html
@@ -177,6 +177,19 @@
                                         <br>
                                     </div>
                                     
+                                    <!-- <div class="gallery">
+                                        <div class="gallery-item">
+                                        <a href="img/Decubed/Level 1.png" data-lightbox="gallery">
+                                            <img src="img/Decubed/Level 1.png" alt="Thumbnail 1">
+                                        </a>
+                                        </div>
+                                        <div class="gallery-item">
+                                        <a href="img/Decubed/Level 2.png" data-lightbox="gallery">
+                                            <img src="img/Decubed/Level 2.png">
+                                        </a>
+                                        </div>
+                                    </div> -->
+                                    
                                     <div class="img-container banner-container mx-3 mb-3">
                                         <img src="img/Decubed/Level 1.png" class="feature-banner" style="max-width: 400px;">
                                         <p class="img-caption mx-2 mt-1">Level 1: Teaching the player to roll</p>
