--- a/haulaway.html
+++ b/haulaway.html
@@ -177,10 +177,10 @@
                                             <img src="img/haulaway/explosive.jpg" class="feature-banner">
                                             <p class="img-caption mx-2 mt-1">Enemies attack!</p>
                                         </div>
-                                        <div class="img-container banner-container mx-3">
+                                        <!-- <div class="img-container banner-container mx-3">
                                             <img src="img/haulaway/piratedeath.jpg" class="feature-banner">
                                             <p class="img-caption mx-2 mt-1">Defend your cargo and destroy your enemies!</p>
-                                        </div>
+                                        </div> -->
                                     </div>
 
                                 </div>
