--- a/spacerunners.html
+++ b/spacerunners.html
@@ -135,9 +135,10 @@
                                             <br>
                                             <br>
                                             
-                                            The game is available for download 
-                                            <a href="https://ishorty.itch.io/spacerunners" target="_blank">
-                                            here.</a>
+                                            The game is available to play and for download on my itch.io page. I hope you enjoy it!
+                                            <br>
+                                            <br>
+                                            <a class="itch-button" href="https://ishorty.itch.io/spacerunners"><img class="nodrag" src="img/itch/badge-color.png"></a>
 
                                         </p>
                                         <br>
