--- a/wondervalley.html
+++ b/wondervalley.html
@@ -126,8 +126,14 @@
                                             <a href="https://bestcolour.github.io/site/#/">Kee Shen</a>
                                             and
                                             <a href="https://kaixingnicholas.wixsite.com/gdportfolio">Nicholas Teoh</a>
-                                            , without whom this challenging project would likely fail.
+                                            , without whom this challenging project would have been very strenuous.
                                             <br>
+                                            <br>
+                                            If you'd like to play the game, it is available to play and for download on my itch.io page. I hope you enjoy the game!
+                                            <br>
+                                            <br>
+                                            <a class="itch-button" href="https://ishorty.itch.io/wonder-valley"><img class="nodrag" src="img/itch/badge-color.png"></a>
+
                                         </p>
                                         <br>
                                         <h3 class="pb-2" style="font-size: 1.5em;">Project Information</h3>
