--- a/spacerunners.html
+++ b/spacerunners.html
@@ -72,6 +72,42 @@
         </div>
     </div>
 
+    <div class="mobile-navbar">
+        <div class="mnavroot">
+            <div id="mySidenav" class="mnavbutton m-3">
+                    <img src="img/mobile/hamburgicon.png" alt="" onclick="openNav()">
+            </div>
+            <div id="sidepanel">
+                <div class="panelbutton py-3">
+                    <a class="color-transition" href="index.html" onclick="closeNav()">
+                        Home
+                    </a>
+                </div>
+                <div class="panelbutton py-3">
+                    <a class="color-transition" href="index.html#games" onclick="closeNav()">
+                        Projects
+                    </a>
+                </div>
+                <div class="panelbutton py-3">
+                    <a class="color-transition" href="https://drive.google.com/file/d/1l9Jhh03rFOzCsblhSOQDXUKh6I7GtRdj/view?usp=sharing" target="_blank" rel="noopener noreferrer">
+                        Resume
+                    </a>
+
+                </div>
+                <div class="panelbutton py-3">
+                    <a class="color-transition" href="mailto:enriquecmarcelo@gmail.com" rel="noopener noreferrer">
+                        Contact Me
+                    </a>
+
+                </div>
+
+
+            </div>
+            <div id="overlaypanel" onclick="closeNav()">
+            </div>
+        </div>
+    </div>
+
     <!-- END OF HEADER -->
 
     <div id="page">
