hg design notes

--- a/index.html
+++ b/index.html
@@ -244,13 +244,18 @@
                     
                     <div class="project-content">
                         <h3><a href="hangryguardians.html">Hangry Guardians</a></h3>
-                        <p>
-                            A 2D mobile puzzle game app created for GameStart Asia.
-                            <br>
-                            Developed using the Unity Game Engine.
-                            <br>
-                            Developed by a team of 8 over the course of 15 weeks.
-                        </p>
+                        <div class="textnbuttonwrap">
+                            <p>
+                                A 2D mobile puzzle game app created for GameStart Asia.
+                                <br>
+                                Developed using the Unity Game Engine.
+                                <br>
+                                Developed by a team of 8 over the course of 15 weeks.
+                                <br>
+                                <br>
+                            </p>
+                            <a class="gplay-button" href="https://play.google.com/store/apps/details?id=com.ET.HangryGods"><img class="nodrag" src="img/gplay/google-play-badge.png"></a>
+                        </div>
                     </div>
     
                 </div>
