--- a/hangryguardians.html
+++ b/hangryguardians.html
@@ -152,6 +152,13 @@
                                                 Summary
                                         </h3>
                                         <p>
+                                            With the help of Alyse, Gamestarts' mascot, 
+                                            the player must travel to shrines across the lands to 
+                                            calm the hungry and angry guardians by delivering the correct offerings 
+                                            to them.
+                                        </p>
+                                        <br>
+                                        <p>
                                             Hangry Guardians is a client project for GameStart Asia 2019. 
                                             It is a 2D mobile puzzle game app created in Unity and showcased at Gamestart, 
                                             a gaming convention in Singapore. 
@@ -163,18 +170,49 @@
                                             <br>
                                         </p>
                                         <br>
-                                        <p>
-                                            With the help of Alyse, Gamestarts' mascot, 
-                                            the player must travel to shrines across the lands to 
-                                            calm the hungry and angry guardians by delivering the correct offerings 
-                                            to them.
-                                        </p>
+                                        <!-- <button type="button" class="collapsible">Design Notes</button> -->
+                                        <!--  class="collapsible-content" -->
+                                        <div> 
+                                            <p>
+                                                <strong>
+                                                    Design Notes: 
+                                                </strong>
+                                                <br>
+                                                As the level designer for this game, and with a daunting target of 25 levels, 
+                                                I iterated through numerous levels quickly with a set of guidelines I built up over time.
+                                                <br>
+                                                <br>
+                                                <strong>
+                                                    Guideline 1: 
+                                                </strong>
+                                                <br>
+                                                Maintain a steady difficulty curve, lowering the difficulty when new mechanics are introduced.
+                                                Keep it generally low for the targeted causal audience, but keeping in mind that the game
+                                                will be exhibited in a convention where attendees are likely gamers, add some levels 
+                                                with higher difficulty.
+                                                <br>
+                                                <strong>
+                                                    Guideline 2: 
+                                                </strong>
+                                                <br>
+                                                Level size has to be limited so players can easily tap the tiles offerings are on. Design
+                                                within those constraints.
+                                                <br>
+                                                <strong>
+                                                    Guideline 3: 
+                                                </strong>
+                                                <br>
+                                                To keep levels from becoming too complex, use at most 2 primary mechanics (God Powers) at a time.
+                                            </p>
+                                        </div> 
+
+
                                         <br>
-                                        <p>
-                                            Download the game from the Google Play store from
-                                            <a href="https://play.google.com/store/apps/details?id=com.ET.HangryGods" target="_blank">
-                                            here.</a>
-                                        </p>
+                                        If you'd like to play the game, it is available to play and for download on my itch.io page. I hope you enjoy the game!
+                                        <br>
+                                        <br>
+                                        <a class="itch-button" href="https://ishorty.itch.io/wonder-valley"><img class="nodrag" src="img/itch/badge-color.png"></a>
+                                        <br>
                                         <br>
                                         <h3 class="pb-2" style="font-size: 1.5em;">Project Information</h3>
                                         <p class="pb-3" style="line-height: 1.5em;">
@@ -194,7 +232,7 @@
                                             Designer, Gameplay Programmer
                                             <br>
                                             <strong>Contributions:</strong>
-                                            Level design, mechanics design and programming implementation.
+                                            Level design, mechanics design and implementation.
                                             <br>
                                             <strong>Software Used:</strong>
                                             Unity Game Engine
